--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
       "es5",
       "es2015",
       "es2016",
-      "es2017"
+      "es2017",
+      "dom"
     ],
     "typeRoots": [
       "./node_modules/@types",
