Selenium driver WIP

--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "test": "lerna exec --parallel -- mocha --opts mocha.opts",
     "test:watch": "lerna exec --no-sort -- mocha --opts mocha.opts --watch",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app e2e",
+    "test:e2e-simple": "lerna run --stream --scope @testring/e2e-test-app e2e-simple",
     "test:coverage": "nyc npm test",
     "cleanup": "lerna exec --parallel -- rimraf ./dist -G",
     "build": "lerna exec -- tsc --target es2015",
     "build:watch": "lerna exec -- tsc --target es2015 --watch",
     "build:clear": "npm run lint:src && npm run lint:test && npm run build",
-    "build:precommit": "npm run build:clear && npm run test && npm run test:e2e",
+    "build:precommit": "npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:coverage && npm run test:e2e"
   },
   "precommit": "build:precommit",
