--- a/packages/testring-browser-proxy/package.json
+++ b/packages/testring-browser-proxy/package.json
@@ -8,11 +8,11 @@
     "url": "https://github.com/ringcentral/ringcentral-js-test-framework.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@testring/child-process": "0.1.0",
     "@testring/pluggable-module": "0.1.0",
-    "@testring/plugin-api": "0.1.0",
+    "@testring/test-utils": "0.1.0",
     "@testring/transport": "0.1.0",
     "@types/nanoid": "^1.0.0",
     "nanoid": "^1.0.3"
