--- a/packages/testring-child-process/package.json
+++ b/packages/testring-child-process/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@testring/transport": "^0.1.0"
   }
