--- a/packages/testring-cli-config/package.json
+++ b/packages/testring-cli-config/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@testring/typings": "^0.1.0",
     "@types/deepmerge": "^2.1.0",
