--- a/packages/testring-cli/package.json
+++ b/packages/testring-cli/package.json
@@ -11,8 +11,9 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "@testring/browser-proxy": "0.1.0",
     "@testring/cli-config": "0.1.0",
     "@testring/logger": "0.1.0",
     "@testring/plugin-api": "0.1.0",
