--- a/packages/testring-http-api/package.json
+++ b/packages/testring-http-api/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/ringcentral/ringcentral-js-test-framework.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@testring/transport": "0.1.0",
     "@testring/pluggable-module": "0.1.0",
