--- a/packages/testring-plugin-api/package.json
+++ b/packages/testring-plugin-api/package.json
@@ -8,8 +8,10 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "@testring/browser-proxy": "0.1.0",
+    "@testring/logger": "0.1.0",
     "@testring/pluggable-module": "0.1.0",
     "@testring/test-finder": "0.1.0",
     "@testring/typings": "0.1.0"
