--- a/packages/testring-plugin-selenium-driver/package.json
+++ b/packages/testring-plugin-selenium-driver/package.json
@@ -8,8 +8,9 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "@testring/typings": "0.1.0",
     "@testring/plugin-api": "0.1.0",
     "@types/webdriverio": "^4.10.2",
     "webdriverio": "^4.13.0"
