--- a/packages/testring-transport/package.json
+++ b/packages/testring-transport/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/ringcentral/ringcentral-js-test-framework.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@types/nanoid": "^1.0.0",
     "nanoid": "^1.0.3"
