--- a/packages/testring-cli/package.json
+++ b/packages/testring-cli/package.json
@@ -8,10 +8,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ringcentral/ringcentral-js-test-framework.git"
+    "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@testring/cli-config": "0.1.0",
     "@testring/logger": "0.1.0",
