--- a/packages/testring-http-api/package.json
+++ b/packages/testring-http-api/package.json
@@ -5,10 +5,10 @@
   "typings": "./src/index.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ringcentral/ringcentral-js-test-framework.git"
+    "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@testring/transport": "0.1.0",
     "@testring/pluggable-module": "0.1.0",
