--- a/packages/testring-transport/package.json
+++ b/packages/testring-transport/package.json
@@ -5,10 +5,10 @@
   "typings": "./src/index.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ringcentral/ringcentral-js-test-framework.git"
+    "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@types/nanoid": "^1.0.0",
     "nanoid": "^1.0.3"
