--- a/packages/testring-typings/package.json
+++ b/packages/testring-typings/package.json
@@ -5,8 +5,8 @@
   "typings": "./index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ringcentral/ringcentral-js-test-framework.git"
+    "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "ISC"
+  "license": "MIT"
 }
