--- a/packages/testring-cli/package.json
+++ b/packages/testring-cli/package.json
@@ -2,7 +2,7 @@
   "name": "@testring/cli",
   "version": "0.1.0",
   "main": "./dist/index.js",
-  "typings": "./src/index.ts",
+  "types": "./src/index.ts",
   "bin": {
     "testring": "./bin/testring.js"
   },
