--- a/packages/testring-logger/package.json
+++ b/packages/testring-logger/package.json
@@ -2,7 +2,7 @@
   "name": "@testring/logger",
   "version": "0.1.0",
   "main": "./dist/index.js",
-  "typings": "./src/index.ts",
+  "types": "./src/index.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/ringcentral/testring.git"
