--- a/packages/testring-web-application/package.json
+++ b/packages/testring-web-application/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@testring/web-manager",
+  "name": "@testring/web-application",
   "version": "0.1.0",
   "main": "./dist/index.js",
   "typings": "./src/index.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ringcentral/ringcentral-js-test-framework.git"
+    "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@testring/browser-proxy": "0.1.0",
     "@testring/logger": "0.1.0",
