--- a/packages/testring-cli-config/package.json
+++ b/packages/testring-cli-config/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@testring/typings": "^0.1.0",
+    "@testring/logger": "^0.1.0",
     "@types/deepmerge": "^2.1.0",
     "@types/yargs": "^11.0.0",
     "deepmerge": "^2.1.1",
