--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:watch": "lerna exec --no-sort -- mocha --opts mocha.opts --watch",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app e2e",
     "test:coverage": "nyc npm test",
+    "test:publish": "coveralls < ./coverage/lcov.info && rimraf ./coverage -G",
     "cleanup": "lerna exec --parallel -- rimraf ./dist -G",
     "build": "lerna exec -- tsc --target es2015",
     "build:watch": "lerna exec -- tsc --target es2015 --watch",
@@ -50,7 +51,8 @@
     "@types/node": "10.3.5",
     "babel-eslint": "8.2.5",
     "chai": "4.1.2",
-    "eslint": "5.0.0",
+    "coveralls": "3.0.1",
+    "eslint": "5.0.1",
     "eslint-config-ringcentral": "0.3.0",
     "eslint-plugin-react": "7.9.1",
     "eslint-plugin-typescript": "0.12.0",
