--- a/packages/testring-plugin-api/package.json
+++ b/packages/testring-plugin-api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@testring/pluggable-module": "0.1.0",
     "@testring/test-finder": "0.1.0",
+    "@testring/test-run-controller": "0.1.0",
     "@testring/typings": "0.1.0"
   }
 }
