Tunning up travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
+git:
+  depth: 10
+
 language: node_js
 
 node_js:
   - "7"
   - "8"
-  - "9"
   - "10"
 
 script:
@@ -11,3 +13,8 @@ script:
 
 after_script:
   - npm run test:publish
+
+  # publishing to npm
+  # uncomment when package will be ready to publish
+  # if: tag IS present
+  #   - npm run publish:ci
