moved browser-proxy and transprot interfaces and enums to types package, integrated

--- a/packages/testring-logger/package.json
+++ b/packages/testring-logger/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@testring/transport": "0.1.0",
-    "@testring/typings": "0.1.0",
+    "@testring/types": "0.1.0",
     "@testring/pluggable-module": "0.1.0"
   }
 }
