--- a/packages/testring-http-api/package.json
+++ b/packages/testring-http-api/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@testring/transport": "0.1.0",
     "@testring/pluggable-module": "0.1.0",
-    "@testring/typings": "^0.1.0",
+    "@testring/types": "^0.1.0",
     "@testring/logger": "^0.1.0",
     "@testring/test-utils": "^0.1.0",
     "@types/nanoid": "^1.0.0",
