--- a/packages/testring-transport/package.json
+++ b/packages/testring-transport/package.json
@@ -10,6 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
+    "@testring/types": "0.1.0",
     "@types/nanoid": "^1.0.0",
     "nanoid": "^1.0.4"
   },
