--- a/packages/testring-web-application/package.json
+++ b/packages/testring-web-application/package.json
@@ -10,13 +10,16 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/browser-proxy": "0.1.0",
     "@testring/logger": "0.1.0",
     "@testring/pluggable-module": "0.1.0",
     "@testring/transport": "0.1.0",
+    "@testring/types": "0.1.0",
     "@types/lodash": "^4.14.110",
     "@types/nanoid": "^1.0.0",
     "lodash": "^4.17.10",
     "nanoid": "^1.0.4"
+  },
+  "devDependencies": {
+    "@testring/test-utils": "0.1.0"
   }
 }
