--- a/packages/testring-types/package.json
+++ b/packages/testring-types/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@testring/types",
   "version": "0.1.0",
-  "main": "./index.d.ts",
-  "types": "./index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./src/index.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/ringcentral/testring.git"
