Added functional test for web-application, fixed local issues

--- a/packages/testring-web-application/package.json
+++ b/packages/testring-web-application/package.json
@@ -20,6 +20,7 @@
     "nanoid": "^1.0.4"
   },
   "devDependencies": {
+    "@testring/child-process": "0.1.0",
     "@testring/test-utils": "0.1.0"
   }
 }
