--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noEmitOnError": true,
-    "declaration": true,
+    "declaration": false,
     "outDir": "dist",
     "sourceMap": false,
     "lib": [
