--- a/packages/testring-logger/package.json
+++ b/packages/testring-logger/package.json
@@ -13,5 +13,8 @@
     "@testring/transport": "0.1.0",
     "@testring/types": "0.1.0",
     "@testring/pluggable-module": "0.1.0"
+  },
+  "devDependencies": {
+    "@testring/test-utils": "0.1.0"
   }
 }
