--- a/packages/testring-browser-proxy/package.json
+++ b/packages/testring-browser-proxy/package.json
@@ -14,6 +14,7 @@
     "@testring/pluggable-module": "0.1.0",
     "@testring/plugin-api": "0.1.0",
     "@testring/transport": "0.1.0",
+    "@testring/logger": "0.1.0",
     "@types/nanoid": "^1.0.0",
     "nanoid": "^1.0.3"
   }
