--- a/packages/testring-child-process/package.json
+++ b/packages/testring-child-process/package.json
@@ -10,6 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/transport": "^0.1.0"
+    "@testring/transport": "^0.1.0",
+    "@testring/logger": "0.1.0"
   }
 }
