--- a/packages/testring-pluggable-module/package.json
+++ b/packages/testring-pluggable-module/package.json
@@ -10,6 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
+    "@testring/types": "0.1.0",
     "@types/tapable": "^1.0.2",
     "tapable": "^1.0.0"
   }
