--- a/packages/testring-child-process/package.json
+++ b/packages/testring-child-process/package.json
@@ -8,8 +8,5 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "MIT",
-  "dependencies": {
-    "@testring/logger": "0.1.0"
-  }
+  "license": "MIT"
 }
