--- a/packages/testring/package.json
+++ b/packages/testring/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@testring/utils",
+  "name": "testring",
   "version": "0.1.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
+  "bin": {
+    "testring": "./bin/testring.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ringcentral/testring.git"
@@ -10,8 +13,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "0.1.0",
-    "@types/resolve": "0.0.8",
-    "resolve": "1.8.1"
+    "@testring/api": "0.1.0",
+    "@testring/cli": "0.1.0"
   }
 }
