--- a/packages/testring-plugin-babel/package.json
+++ b/packages/testring-plugin-babel/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@testring/utils",
+  "name": "@testring/plugin-babel",
   "version": "0.1.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
@@ -10,8 +10,8 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "0.1.0",
-    "@types/resolve": "0.0.8",
-    "resolve": "1.8.1"
+    "@testring/plugin-api": "0.1.0",
+    "@types/babel-core": "6.25.5",
+    "babel-core": "^6.26.3"
   }
 }
