--- a/packages/testring-sandbox/package.json
+++ b/packages/testring-sandbox/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@testring/utils",
+  "name": "@testring/sandbox",
   "version": "0.1.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
@@ -10,8 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "0.1.0",
-    "@types/resolve": "0.0.8",
-    "resolve": "1.8.1"
+    "@testring/api": "0.1.0",
+    "@testring/utils": "0.1.0"
   }
 }
