--- a/packages/testring-cli-config/package.json
+++ b/packages/testring-cli-config/package.json
@@ -10,12 +10,11 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "^0.1.0",
-    "@testring/logger": "^0.1.0",
+    "@testring/types": "0.1.0",
+    "@testring/logger": "0.1.0",
     "@types/deepmerge": "^2.1.0",
     "@types/yargs": "^11.0.0",
     "deepmerge": "^2.1.1",
-    "yargs": "^11.0.0",
-    "@testring/logger": "0.1.0"
+    "yargs": "^12.0.1"
   }
 }
