--- a/packages/testring-utils/package.json
+++ b/packages/testring-utils/package.json
@@ -10,6 +10,8 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "0.1.0"
+    "@testring/types": "0.1.0",
+    "@types/resolve": "0.0.8",
+    "resolve": "1.8.1"
   }
 }
