Removed build process from types, made all enums as constants, removed --report flag from config, a lot of small fixes

--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,7 @@
   ],
   "command": {
     "exec": {
-      "ignore": "@testring/@(test-utils|e2e-test-app)"
+      "ignore": "@testring/@(types|test-utils|e2e-test-app)"
     },
     "bootstrap": {
       "npmClientArgs": [
