--- a/packages/testring-api/package.json
+++ b/packages/testring-api/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@testring/types": "0.1.0",
-    "@testring/logger": "0.1.0"
+    "@testring/logger": "0.1.0",
+    "@testring/web-application": "0.1.0"
   }
 }
