--- a/packages/testring-browser-proxy/package.json
+++ b/packages/testring-browser-proxy/package.json
@@ -18,7 +18,9 @@
     "@testring/logger": "0.1.0",
     "@testring/utils": "0.1.0",
     "@types/nanoid": "^1.0.0",
-    "nanoid": "^1.0.4"
+    "@types/yargs": "^11.0.0",
+    "nanoid": "^1.0.4",
+    "yargs": "^12.0.1"
   },
   "devDependencies": {
     "@testring/test-utils": "0.1.0",
