--- a/packages/testring-plugin-selenium-driver/package.json
+++ b/packages/testring-plugin-selenium-driver/package.json
@@ -10,9 +10,11 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "0.1.0",
+    "@testring/child-process": "0.1.0",
     "@testring/plugin-api": "0.1.0",
+    "@testring/types": "0.1.0",
     "@types/webdriverio": "^4.10.2",
+    "selenium-server": "^3.13.0",
     "webdriverio": "^4.13.0"
   }
 }
