--- a/packages/testring-plugin-selenium-driver/package.json
+++ b/packages/testring-plugin-selenium-driver/package.json
@@ -13,8 +13,10 @@
     "@testring/child-process": "0.1.0",
     "@testring/plugin-api": "0.1.0",
     "@testring/types": "0.1.0",
+    "@testring/logger": "0.1.0",
     "@types/webdriverio": "^4.10.2",
     "selenium-server": "^3.13.0",
+    "chromedriver": "^2.40.0",
     "webdriverio": "^4.13.0"
   }
 }
