--- a/packages/testring-browser-proxy/package.json
+++ b/packages/testring-browser-proxy/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@testring/child-process": "0.1.0",
     "@testring/pluggable-module": "0.1.0",
-    "@testring/plugin-api": "0.1.0",
     "@testring/transport": "0.1.0",
     "@testring/types": "0.1.0",
     "@testring/logger": "0.1.0",
@@ -23,7 +22,6 @@
     "yargs": "^12.0.1"
   },
   "devDependencies": {
-    "@testring/test-utils": "0.1.0",
-    "@testring/transport": "0.1.0"
+    "@testring/test-utils": "0.1.0"
   }
 }
