--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,7 @@
   ],
   "command": {
     "exec": {
-      "ignore": "@testring/@(types|test-utils|e2e-test-app)",
+      "ignore": "@testring/@(types|test-utils|e2e-test-app|sample-app)",
       "stream": true
     },
     "bootstrap": {
