--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/chai": "4.1.4",
     "@types/mocha": "5.2.4",
     "@types/node": "10.5.1",
+    "@types/webpack": "4.4.5",
     "babel-eslint": "8.2.5",
     "chai": "4.1.2",
     "coveralls": "3.0.2",
@@ -71,6 +72,7 @@
     "pre-commit": "1.2.2",
     "rimraf": "2.6.2",
     "sinon": "6.0.1",
+    "ts-loader": "4.4.2",
     "ts-node": "7.0.0",
     "typescript": "2.9.2",
     "typescript-eslint-parser": "16.0.1"
