--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
+sudo: required
+
 git:
   depth: 10
+
+addons:
+  chrome: stable
 
 language: node_js
 
@@ -13,7 +18,7 @@ cache:
   - node_modules
 
 script:
-  - npm run build:ci
+  - xvfb-run npm run build:ci
 
 after_script:
   - npm run test:publish
