--- a/packages/testring-recorder-backend/package.json
+++ b/packages/testring-recorder-backend/package.json
@@ -13,12 +13,17 @@
     "start:watch": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'ts-node' ./src/index.ts"
   },
   "dependencies": {
-    "@types/koa": "^2.0.46",
+    "@testring/recorder-app": "^0.1.0",
+    "@types/koa-static": "^4.0.0",
     "koa": "^2.5.1",
+    "koa-static": "^5.0.0",
+    "koa-views": "^6.1.4",
     "opn": "^5.3.0",
     "ws": "^5.2.1"
   },
   "devDependencies": {
+    "@types/koa": "^2.0.46",
+    "@types/koa-views": "^2.0.3",
     "@types/ws": "^5.1.2",
     "nodemon": "^1.17.5",
     "ts-node": "7.0.0"
