--- a/packages/testring-recorder-backend/package.json
+++ b/packages/testring-recorder-backend/package.json
@@ -22,10 +22,13 @@
     "ws": "^5.2.1"
   },
   "devDependencies": {
+    "@testring/types": "^0.1.0",
     "@types/koa": "^2.0.46",
     "@types/koa-views": "^2.0.3",
     "@types/ws": "^5.1.2",
     "nodemon": "^1.17.5",
+    "request": "2.87.0",
+    "request-promise": "4.2.2",
     "ts-node": "7.0.0"
   }
 }
