--- a/packages/testring-logger/package.json
+++ b/packages/testring-logger/package.json
@@ -13,6 +13,7 @@
     "@testring/transport": "0.1.0",
     "@testring/types": "0.1.0",
     "@testring/pluggable-module": "0.1.0",
+    "@testring/utils": "0.1.0",
     "@types/nanoid": "^1.0.0",
     "nanoid": "^1.0.4"
   },
