--- a/packages/testring-logger/package.json
+++ b/packages/testring-logger/package.json
@@ -14,7 +14,9 @@
     "@testring/types": "0.1.0",
     "@testring/pluggable-module": "0.1.0",
     "@testring/utils": "0.1.0",
+    "@types/bytes": "^3.0.0",
     "@types/nanoid": "^1.0.0",
+    "bytes": "^3.0.0",
     "nanoid": "^1.0.4"
   },
   "devDependencies": {
