cleaned up package.json, up nanoid

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "scripts": {
     "postinstall": "lerna bootstrap && npm run link",
-    "link": "lerna exec --no-sort -- node \"../../bin/link\"",
-    "unlink": "lerna exec --no-sort -- node \"../../bin/unlink\"",
-    "lint:src": "lerna exec --parallel --no-sort -- eslint \"./src/**/*.ts\"",
-    "lint:test": "lerna exec --parallel --no-sort -- eslint \"./test/**/*.ts\"",
+    "link": "lerna exec --no-sort -- node ../../bin/link",
+    "unlink": "lerna exec --no-sort -- node ../../bin/unlink",
+    "lint:src": "lerna exec --no-sort --parallel --no-sort -- eslint ./src/**/*.ts",
+    "lint:test": "lerna exec --no-sort --parallel --no-sort -- eslint ./test/**/*.ts",
     "test": "lerna exec -- mocha --opts mocha.opts",
-    "test:watch": "lerna exec --no-sort -- mocha --opts mocha.opts --watch",
+    "test:watch": "lerna exec --parallel -- mocha --opts mocha.opts --watch",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app e2e",
     "test:e2e-simple": "lerna run --stream --scope @testring/e2e-test-app e2e-simple",
     "test:coverage": "nyc npm test",
@@ -59,7 +59,7 @@
   "devDependencies": {
     "@types/chai": "4.1.4",
     "@types/mocha": "5.2.4",
-    "@types/node": "10.5.1",
+    "@types/node": "10.5.2",
     "babel-eslint": "8.2.5",
     "chai": "4.1.2",
     "coveralls": "3.0.2",
@@ -74,7 +74,7 @@
     "nyc": "12.0.2",
     "pre-commit": "1.2.2",
     "rimraf": "2.6.2",
-    "sinon": "6.0.1",
+    "sinon": "6.1.2",
     "ts-node": "7.0.0",
     "typescript": "2.9.2",
     "typescript-eslint-parser": "16.0.1"
