--- a/.eslintrc
+++ b/.eslintrc
@@ -14,11 +14,12 @@
     "node": true
   },
   "rules": {
+    "typescript/member-delimiter-style": 2,
     "typescript/no-unused-vars": 2,
     "no-unused-vars": 0,
     "no-undef": 0,
     "no-void": 2,
     "no-multiple-empty-lines": 2,
-    "quotes": ["error", "single"]
+    "quotes": [2, "single"]
   }
 }
