--- a/packages/testring-recorder-backend/package.json
+++ b/packages/testring-recorder-backend/package.json
@@ -9,11 +9,12 @@
   "author": "RingCentral",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/test-server.ts",
     "start:watch": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'ts-node' ./src/index.ts"
   },
   "dependencies": {
-    "@testring/recorder-app": "^0.1.0",
+    "@testring/recorder-frontend": "^0.1.0",
+    "@testring/transport": "^0.1.0",
     "@types/koa-static": "^4.0.0",
     "koa": "^2.5.1",
     "koa-static": "^5.0.0",
