--- a/packages/testring-recorder-frontend/package.json
+++ b/packages/testring-recorder-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@testring/recorder-app",
+  "name": "@testring/recorder-frontend",
   "version": "0.1.0",
   "main": "./dist/index.bundle.js",
   "repository": {
