--- a/packages/testring-recorder-backend/package.json
+++ b/packages/testring-recorder-backend/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@testring/recorder-frontend": "^0.1.0",
+    "@testring/test-utils": "^0.1.0",
     "@testring/transport": "^0.1.0",
     "@types/koa-static": "^4.0.0",
     "koa": "^2.5.1",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
+    "nanoid": "^1.0.7",
     "opn": "^5.3.0",
     "ws": "^5.2.1"
   },
