--- a/packages/testring-recorder-backend/package.json
+++ b/packages/testring-recorder-backend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@testring/recorder-frontend": "^0.1.0",
+    "@testring/logger": "^0.1.0",
     "@testring/test-utils": "^0.1.0",
     "@testring/transport": "^0.1.0",
     "@types/koa-static": "^4.0.0",
