--- a/packages/testring-recorder-frontend/package.json
+++ b/packages/testring-recorder-frontend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
+    "@types/webpack": "4.4.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "ts-loader": "^4.4.2",
