fixed eslint issues in types

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "postinstall": "lerna bootstrap && npm run link",
     "link": "lerna exec --no-sort -- node ../../bin/link",
     "unlink": "lerna exec --no-sort -- node ../../bin/unlink",
-    "lint:src": "lerna exec --ignore=@testring/e2e-test-app --parallel --no-sort -- eslint --ext .ts ./src/**/*",
-    "lint:test": "lerna exec --parallel --no-sort -- eslint ./test/**/*.ts",
+    "lint:src": "lerna exec --ignore @testring/e2e-test-app --parallel -- eslint ./src/**.ts",
+    "lint:test": "lerna exec --parallel --no-sort -- eslint ./test/**.ts",
     "test": "lerna exec -- mocha --opts mocha.opts",
     "test:watch": "lerna exec --parallel -- mocha --opts mocha.opts --watch",
     "test:e2e": "lerna run --stream --scope @testring/e2e-test-app e2e",
