--- a/packages/testring-cli-config/package.json
+++ b/packages/testring-cli-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/cli-config",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,8 +10,8 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "0.1.0",
-    "@testring/logger": "0.1.0",
+    "@testring/logger": "^0.2.0",
+    "@testring/types": "^0.2.0",
     "@types/deepmerge": "^2.1.0",
     "@types/yargs": "^11.0.0",
     "deepmerge": "^2.1.1",
