--- a/packages/testring-element-path/package.json
+++ b/packages/testring-element-path/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/element-path",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "./dist/index.js",
   "typings": "./src/index.ts",
   "repository": {
@@ -8,7 +8,5 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "MIT",
-  "dependencies": {
-  }
+  "license": "MIT"
 }
