--- a/packages/testring-http-api/package.json
+++ b/packages/testring-http-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/http-api",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,14 +10,14 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/transport": "0.1.0",
-    "@testring/pluggable-module": "0.1.0",
-    "@testring/types": "0.1.0",
-    "@testring/logger": "0.1.0",
-    "@testring/test-utils": "0.1.0",
+    "@testring/logger": "^0.2.0",
+    "@testring/pluggable-module": "^0.2.0",
+    "@testring/test-utils": "^0.2.0",
+    "@testring/transport": "^0.2.0",
+    "@testring/types": "^0.2.0",
     "@types/nanoid": "^1.0.0",
     "@types/request-promise": "^4.1.41",
-    "request-promise": "^4.2.2",
-    "nanoid": "^1.0.7"
+    "nanoid": "^1.0.7",
+    "request-promise": "^4.2.2"
   }
 }
