--- a/packages/testring-sandbox/package.json
+++ b/packages/testring-sandbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/sandbox",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,7 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/api": "0.1.0",
-    "@testring/utils": "0.1.0"
+    "@testring/api": "^0.2.0",
+    "@testring/utils": "^0.2.0"
   }
 }
