--- a/packages/testring-recorder-extension/manifest.tpl.json
+++ b/packages/testring-recorder-extension/manifest.tpl.json
@@ -1,18 +1,31 @@
 {
-  "name": "Hello Extensions",
-  "description" : "Base Level Extension",
   "manifest_version": 2,
-  "browser_action": {
-    "default_popup": "hello.html",
-    "default_icon": "hello_extensions.png"
+  "name": "TestRing",
+  "author": "RingCentral",
+  "icons": {
+    "48": "icon.png"
   },
-  "commands": {
-    "_execute_browser_action": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+F",
-        "mac": "MacCtrl+Shift+F"
-      },
-      "description": "Opens hello.html"
+  "page_action": {
+    "default_icon": "icon.png"
+  },
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "http://localhost/*"
+      ],
+      "js": [
+        "content.js"
+      ]
     }
-  }
+  ],
+  "permissions": [
+    "activeTab",
+    "contextMenus",
+    "tabs"
+  ]
 }
