--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preversion": "npm run build:precommit",
     "link": "lerna exec --no-sort -- node ../../bin/link",
     "unlink": "lerna exec --no-sort -- node ../../bin/unlink",
+    "lint": "npm run lint:src && npm run lint:test",
     "lint:src": "lerna exec --ignore @testring/e2e-test-app --parallel -- eslint ./src/**.ts",
     "lint:test": "lerna exec --parallel --no-sort -- eslint ./test/**.ts",
     "test": "lerna exec -- mocha --opts mocha.opts",
@@ -21,13 +22,14 @@
     "test:e2e-simple": "lerna run --stream --scope @testring/e2e-test-app e2e-simple",
     "test:coverage": "nyc npm test",
     "test:publish": "coveralls < ./coverage/lcov.info && rimraf ./coverage -G",
+    "test:ci": "npm run test:coverage && npm run test:e2e",
     "cleanup": "lerna clean --yes && lerna exec --parallel -- rimraf ./dist -G && npm run unlink && rimraf ./node_modules",
     "build": "lerna exec -- tsc --target es2015 && npm run build:recorder",
     "build:recorder": "lerna run --stream --scope @testring/recorder-frontend build",
     "build:watch": "lerna exec --parallel -- tsc --target es2015 --watch",
-    "build:clear": "npm run lint:src && npm run lint:test && npm run build",
+    "build:clear": "npm run lint && npm run build",
     "build:precommit": "npm run build:clear && npm run test && npm run test:e2e-simple",
-    "build:ci": "npm run build:clear && npm run test:coverage && npm run test:e2e",
+    "build:ci": "npm run build:clear && npm run test:ci",
     "publish": "lerna publish --skip-npm",
     "publish:ci": "lerna exec npm publish",
     "check-deps": "lerna exec -- npm-check --skip-unused --ignore @testring/*"
