--- a/.travis.yml
+++ b/.travis.yml
@@ -9,33 +9,19 @@ addons:
 language: node_js
 
 node_js:
-  - "8"
   - "10"
+  - "8"
 
 cache:
   directories:
   - $HOME/.npm
   - node_modules
 
-stages:
-  - name: lint
-  - name: compile
-  - name: test
-  - name: publish
-    if: (branch = master AND tag IS present)
+script:
+  - xvfb-run npm run build:ci
 
+after_script:
+  - npm run test:publish
 
-jobs:
-  include:
-    - stage: lint
-      script: npm run lint
-
-    - stage: compile
-      script: npm run build
-
-    - stage: test
-      script: xvfb-run npm run test:ci
-      after_script: npm run test:publish
-
-    - stage: publish
-      script: npm run publish:ci
+  if: (branch = master AND tag IS present)
+    - npm run publish:ci
