--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/chai": "4.1.4",
     "@types/mocha": "5.2.4",
     "@types/node": "10.5.2",
+    "@types/webpack": "4.4.5",
     "babel-eslint": "8.2.5",
     "chai": "4.1.2",
     "coveralls": "3.0.2",
@@ -78,6 +79,7 @@
     "rimraf": "2.6.2",
     "sinon": "6.1.2",
     "ts-node": "7.0.0",
+    "ts-loader": "^4.4.2",
     "typescript": "2.9.2",
     "typescript-eslint-parser": "16.0.1"
   }
