--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ addons:
 
 language: node_js
 
+node_js:
+  - "10"
+  - "8"
+
 cache:
   directories:
   - $HOME/.npm
@@ -24,12 +28,16 @@ jobs:
       node_js:
         - "10"
         - "8"
-      script: xvfb-run npm run build:ci
-      after_success: npm run test:publish
+      script:
+        - xvfb-run npm run build:ci
+      after_success:
+        - npm run test:publish
 
     - stage: publish
-      node_js: "10"
-      script: npm run build
+      node_js:
+        - "10"
+      script:
+        - npm run build
       deploy:
         provider: script
         script: npm run publish:ci
