--- a/.travis.yml
+++ b/.travis.yml
@@ -18,23 +18,19 @@ cache:
   - node_modules
 
 stages:
-  - build
+  - name: build
   - name: publish
     if: tag IS present
 
 jobs:
   include:
     - stage: build
-      node_js:
-        - "10"
-        - "8"
       script:
         - xvfb-run npm run build:ci
       after_success:
         - npm run test:publish
     - stage: publish
-      node_js:
-        - "10"
+      node_js: "10"
       script:
         - npm run build
       deploy:
