--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ cache:
 
 stages:
   - name: test
-  - name: deploy
-    if: tag IS present
+  - name: npm release
+    # if: tag IS present
 
 jobs:
   include:
@@ -29,7 +29,7 @@ jobs:
         - xvfb-run npm run build:ci
       after_success:
         - npm run test:publish
-    - stage: deploy
+    - stage: npm release
       node_js: "10"
       script:
         - npm run build
