--- a/.travis.yml
+++ b/.travis.yml
@@ -17,18 +17,16 @@ cache:
   - $HOME/.npm
   - node_modules
 
-script: echo "Testing..."
+script: xvfb-run npm run build:ci
+
+after_success: npm run test:publish
 
 stages:
-  - name: test
   - name: npm release
-    # if: tag IS present
+    if: tag IS present
 
 jobs:
   include:
-    - stage: test
-      script: xvfb-run npm run build:ci
-      after_success: npm run test:publish
     - stage: npm release
       node_js: "10"
       script: npm run build
