--- a/package.json
+++ b/package.json
@@ -69,18 +69,19 @@
     "babel-eslint": "8.2.5",
     "chai": "4.1.2",
     "coveralls": "3.0.2",
-    "eslint": "5.0.1",
+    "eslint": "5.1.0",
     "eslint-config-ringcentral": "0.3.0",
     "eslint-plugin-react": "7.9.1",
     "eslint-plugin-typescript": "0.12.0",
     "fs-extra": "6.0.1",
+    "glob": "7.1.2",
     "lerna": "2.11.0",
     "mocha": "5.2.0",
     "npm-check": "5.7.1",
     "nyc": "12.0.2",
     "pre-commit": "1.2.2",
     "rimraf": "2.6.2",
-    "sinon": "6.1.2",
+    "sinon": "6.1.3",
     "ts-node": "7.0.0",
     "typescript": "2.9.2",
     "typescript-eslint-parser": "16.0.1"
