--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ jobs:
       deploy:
         provider: script
         script: npm run publish:ci
+        skip_cleanup: true
         on:
           tags: true
           all_branches: true
