--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:precommit": "npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:ci",
     "publish": "lerna publish --skip-npm",
-    "publish:ci": "echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc && node ./bin/publish.js",
+    "publish:ci": "node ./bin/publish.js",
     "check-deps": "lerna exec -- npm-check --skip-unused --ignore @testring/*"
   },
   "precommit": "build:precommit",
@@ -68,6 +68,7 @@
     "@types/node": "10.5.2",
     "babel-eslint": "8.2.5",
     "chai": "4.1.2",
+    "ci-publish": "1.3.1",
     "coveralls": "3.0.2",
     "eslint": "5.1.0",
     "eslint-config-ringcentral": "0.3.0",
