--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     "@types/node": "10.5.2",
     "babel-eslint": "8.2.5",
     "chai": "4.1.2",
-    "ci-publish": "1.3.1",
     "coveralls": "3.0.2",
     "eslint": "5.1.0",
     "eslint-config-ringcentral": "0.3.0",
@@ -79,6 +78,7 @@
     "lerna": "2.11.0",
     "mocha": "5.2.0",
     "npm-check": "5.7.1",
+    "npm-utils": "2.0.3",
     "nyc": "12.0.2",
     "pre-commit": "1.2.2",
     "rimraf": "2.6.2",
