Extension transport server and client for message exchange between content and background scripts

--- a/packages/testring-recorder-extension/manifest.tpl.json
+++ b/packages/testring-recorder-extension/manifest.tpl.json
@@ -11,7 +11,8 @@
   "background": {
     "scripts": [
       "background.bundle.js"
-    ]
+    ],
+    "persistent": false
   },
   "content_scripts": [
     {
