--- a/packages/testring-recorder-extension/package.json
+++ b/packages/testring-recorder-extension/package.json
@@ -23,5 +23,9 @@
     "ts-node": "^7.0.0",
     "webpack": "4.15.1",
     "webpack-cli": "3.0.8"
+  },
+  "dependencies": {
+    "eventemitter3": "^3.1.0",
+    "nanoid": "^1.0.7"
   }
 }
