--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "testring-build",
   "private": true,
-  "version": "0.1.0",
   "author": "RingCentral",
   "license": "MIT",
   "repository": {
@@ -30,7 +29,7 @@
     "build:clear": "npm run lint && npm run build",
     "build:precommit": "npm run build:clear && npm run test && npm run test:e2e-simple",
     "build:ci": "npm run build:clear && npm run test:ci",
-    "publish": "lerna publish --skip-npm",
+    "publish": "lerna publish --force-publish=* --skip-npm",
     "publish:ci": "node ./bin/publish.js",
     "check-deps": "lerna exec -- npm-check --skip-unused --ignore @testring/*"
   },
