--- a/packages/testring-recorder-frontend/package.json
+++ b/packages/testring-recorder-frontend/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "css-loader": "1.0.0",
-    "mini-css-extract-plugin": "0.4.1",
+    "style-loader": "^0.21.0",
     "monaco-editor-webpack-plugin": "^1.4.0",
     "react-ace": "6.1.4",
     "react-monaco-editor": "0.17.2"
