--- a/packages/testring-recorder-frontend/tsconfig.json
+++ b/packages/testring-recorder-frontend/tsconfig.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "jsx": "react"
+    "jsx": "react",
+    "typeRoots": [
+      "./types"
+    ],
   },
   "include": [
     "*.ts",
