--- a/packages/testring-recorder-frontend/package.json
+++ b/packages/testring-recorder-frontend/package.json
@@ -20,13 +20,10 @@
     "react-dom": "^16.4.1",
     "ts-loader": "^4.4.2",
     "webpack": "4.15.1",
-    "webpack-cli": "3.0.8"
-  },
-  "dependencies": {
+    "webpack-cli": "3.0.8",
     "css-loader": "1.0.0",
     "style-loader": "^0.21.0",
     "monaco-editor-webpack-plugin": "^1.4.0",
-    "react-ace": "6.1.4",
     "react-monaco-editor": "0.17.2"
   }
 }
