--- a/packages/testring-plugin-api/package.json
+++ b/packages/testring-plugin-api/package.json
@@ -10,6 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
+    "@testring/http-api": "^0.2.2",
     "@testring/logger": "^0.2.2",
     "@testring/types": "^0.2.2",
     "@testring/utils": "^0.2.2"
