--- a/packages/testring-types/package.json
+++ b/packages/testring-types/package.json
@@ -8,5 +8,9 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@types/request": "^2.47.1",
+    "@types/request-promise": "^4.1.41"
+  }
 }
