Type-related stuff moved to @testring/types, element path format changed to array of objects with id node

--- a/packages/testring-recorder-extension/tsconfig.json
+++ b/packages/testring-recorder-extension/tsconfig.json
@@ -6,6 +6,10 @@
   "include": [
     "*.ts",
     "src/**/*.ts",
-    "src/**/*.json"
+    "src/**/*.json",
+    "node_modules/@testring/types/src/index.ts"
+  ],
+  "files": [
+    "../testring-types/src/index.ts"
   ]
 }
