--- a/packages/testring-recorder-extension/package.json
+++ b/packages/testring-recorder-extension/package.json
@@ -16,6 +16,7 @@
     "build": "npm run build:static && npm run build:script"
   },
   "devDependencies": {
+    "@testring/types": "^0.2.2",
     "@types/chrome": "0.0.69",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
