Added basic API docs, added memory usage logging, changed workerLimit to 10

--- a/packages/testring-api/package.json
+++ b/packages/testring-api/package.json
@@ -13,6 +13,8 @@
     "@testring/logger": "^0.2.3",
     "@testring/transport": "^0.2.3",
     "@testring/types": "^0.2.3",
-    "@testring/web-application": "^0.2.3"
+    "@testring/web-application": "^0.2.3",
+    "@types/bytes": "^3.0.0",
+    "bytes": "^3.0.0"
   }
 }
