Added readme generation for each package

--- a/lerna.json
+++ b/lerna.json
@@ -13,6 +13,11 @@
       "npmClientArgs": [
         "--no-package-lock"
       ]
+    },
+    "publish": {
+      "forcePublish": "*",
+      "allowBranch": "master",
+      "skipNpm": true
     }
   },
   "version": "0.2.3"
