--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "test:publish": "coveralls < ./coverage/lcov.info && rimraf ./coverage -G",
     "test:ci": "npm run test:coverage && npm run test:e2e && npm run test:publish",
     "cleanup": "lerna clean --yes && lerna exec --parallel -- rimraf ./dist -G && npm run unlink && rimraf ./node_modules",
-    "build": "lerna exec -- tsc --target es2015 && npm run build:client-ws-transport && npm run build:recorder && npm run build:extension",
-    "build:client-ws-transport": "lerna run --stream --scope @testring/client-ws-transport build",
+    "build": "lerna exec -- tsc --target es2015 && npm run build:recorder && npm run build:extension",
     "build:recorder": "lerna run --stream --scope @testring/recorder-frontend build",
     "build:extension": "lerna run --stream --scope @testring/recorder-extension build",
     "build:watch": "lerna exec --parallel -- tsc --target es2015 --watch",
@@ -51,6 +50,8 @@
     "exclude": [
       "packages/*/src/index.ts",
       "packages/testring-types",
+      "packages/testring-client-ws-transport",
+      "packages/testring-recorder-extension",
       "packages/testring-web-application/src/web-application.ts",
       "packages/testring-web-application/src/web-client.ts",
       "packages/testring-plugin-selenium-driver/src/plugin/index.ts"
