--- a/packages/testring-client-ws-transport/package.json
+++ b/packages/testring-client-ws-transport/package.json
@@ -1,24 +1,16 @@
 {
   "name": "@testring/client-ws-transport",
   "version": "0.2.2",
-  "main": "./dist/index.bundle.js",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/ringcentral/testring.git"
   },
   "author": "RingCentral",
   "license": "MIT",
-  "scripts": {
-    "build": "webpack --config webpack.config.ts",
-    "build:watch": "webpack --config webpack.config.ts --watch"
-  },
-  "devDependencies": {
-    "@testring/types": "^0.2.2",
-    "ts-node": "^7.0.0",
-    "webpack": "4.15.1",
-    "webpack-cli": "3.0.8"
-  },
   "dependencies": {
+    "@testring/types": "^0.2.2",
     "eventemitter3": "^3.1.0"
   }
 }
