--- a/packages/testring-cli-config/package.json
+++ b/packages/testring-cli-config/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@testring/logger": "^0.2.4",
     "@testring/types": "^0.2.4",
+    "@testring/utils": "^0.2.4",
     "@types/deepmerge": "^2.1.0",
     "@types/yargs": "^11.0.0",
     "deepmerge": "^2.1.1",
