--- a/packages/testring-recorder-extension/package.json
+++ b/packages/testring-recorder-extension/package.json
@@ -19,15 +19,15 @@
     "@testring/types": "^0.2.2",
     "@testring/client-ws-transport": "^0.2.2",
     "@types/chrome": "0.0.69",
+    "@types/webpack": "4.4.5",
+    "eventemitter3": "^3.1.0",
     "mkdirp": "^0.5.1",
+    "nanoid": "^1.0.7",
     "ncp": "^2.0.0",
     "nodemon": "^1.18.1",
+    "ts-loader": "^4.4.2",
     "ts-node": "^7.0.0",
     "webpack": "4.15.1",
     "webpack-cli": "3.0.8"
-  },
-  "dependencies": {
-    "eventemitter3": "^3.1.0",
-    "nanoid": "^1.0.7"
   }
 }
