--- a/packages/testring-client-ws-transport/package.json
+++ b/packages/testring-client-ws-transport/package.json
@@ -10,7 +10,6 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "^0.2.2",
-    "eventemitter3": "^3.1.0"
+    "@testring/types": "^0.2.2"
   }
 }
