--- a/packages/testring-client-ws-transport/package.json
+++ b/packages/testring-client-ws-transport/package.json
@@ -10,6 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
+    "@testring/constants": "^0.2.4",
     "@testring/types": "^0.2.2"
   }
 }
